Updated blackrock docos

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blackrock Application Server And Framework</title>
-    <meta name="description" content="Blackrock Application Server And Framework">
+    <title>Blackrock Application Server</title>
+    <meta name="description" content="Blackrock Application Server">
     <script src="scripts/jquery.min.js"></script>
     <link rel="stylesheet" href="scripts/bootstrap/css/bootstrap.css">
     <script src="scripts/script.js"></script>
@@ -17,11 +17,9 @@
     <link rel="stylesheet" href="css/image-box.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href='css/components.css'>
-    <link rel="stylesheet" href='scripts/flexslider/flexslider.css'>
     <link rel="stylesheet" href='scripts/magnific-popup.css'>
     <link rel="stylesheet" href='scripts/php/contact-form.css'>
     <link rel="stylesheet" href='scripts/social.stream.css'>
-    <link rel="stylesheet" href='scripts/jquery.flipster.min.css'>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="skin.css">
 </head>
@@ -64,7 +62,7 @@
                         Here is a gift from us to you
                     </h4>
                     <p>
-                        Blackrock is an Application Server and Framework for Node.JS. Unlike many other application servers and frameworks, you don't need to be radically self-reliant to use it. It really is quite simple.<br/><br/>In stand-alone mode it can run an unlimited number of services in almost any folder structure you choose. It currently supports the HTTP(S) interface, but we have plans to deliver many more, including - WebSockets, SSH, ZeroMQ, NanoMSG and Axon.
+                        Blackrock is an Application Server written in Node.JS. Unlike many other application servers, you don't need to be radically self-reliant to use it. It really is quite simple.<br/><br/>In stand-alone mode it can run an unlimited number of apps in almost any folder structure you choose. It currently supports the HTTP(S) interface, but we have plans to deliver many more, including - WebSockets, SSH, ZeroMQ, NanoMSG and Axon.
                     </p>
                     <hr class="space s" />
                     <a href="docs/index.html" class="circle-button btn btn-lg">Read The Docs</a>
@@ -80,14 +78,14 @@
                 <div class="col-md-6 boxed-inverse">
                     <h4>Install Stand-Alone</h4>
                     <p>
-                        Blackrock can be run as a stand-alone application server. Make sure that you <a href="https://docs.npmjs.com/downloading-and-installing-node-js-and-npm" style="color:blue;" target="_blank">Install Node.JS and NPM</a> 
+                        Blackrock can be run as a stand-alone application server. Make sure that you <a href="https://docs.npmjs.com/downloading-and-installing-node-js-and-npm" style="color:blue;" target="_blank">Install Node.JS and NPM</a> (Version 10+)
                         and then go to your terminal and type <pre>&gt; npm install -g is-blackrock<br/>&nbsp;</pre>
                     </p>
                 </div>
                 <div class="col-md-6 boxed-inverse">
                     <h4>Or as a Dependency</h4>
                     <p>
-                        You can also install Blackrock as a dependency within your own Node.JS project. Once again, you will need to <a href="https://docs.npmjs.com/downloading-and-installing-node-js-and-npm" style="color:blue;" target="_blank">Install Node.JS and NPM</a> 
+                        You can also install Blackrock as a dependency within your own Node.JS project. Once again, you will need to <a href="https://docs.npmjs.com/downloading-and-installing-node-js-and-npm" style="color:blue;" target="_blank">Install Node.JS and NPM</a> (Version 10+)
                         and then go to your terminal and type <pre>&gt; cd /path/to/your/project <br/>&gt; npm install --save is-blackrock</pre>
                     </p>
                 </div>
@@ -101,7 +99,7 @@
                 <div class="row footer-main">
                     <hr class="space s" />
                     <p>Developed in Sydney, Australia</p>
-                    <p style="font-size:10px;">Blackrock Application Server And Framework is in no way affiliated with Burning Man Festival</p>
+                    <p style="font-size:10px;">Blackrock Application Server is in no way affiliated with Burning Man Festival</p>
                     <hr class="space xs" />
                 </div>
                 <div class="row copy-row">
@@ -116,7 +114,6 @@
                 </div>
             </div>
         </div>
-        <link rel="stylesheet" href="scripts/iconsmind/line-icons.min.css">
         <script src="scripts/bootstrap/js/bootstrap.min.js"></script>
         <script src='scripts/jquery.tab-accordion.js'></script>
         <script src='scripts/parallax.min.js'></script>
