--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         Here is a gift from us to you
                     </h4>
                     <p>
-                        Blackrock is an Application Server written in Node.JS. Unlike many other application servers, you don't need to be radically self-reliant to use it. It really is quite simple.<br/><br/>In stand-alone mode it can run an unlimited number of apps in almost any folder structure you choose. It currently supports the HTTP(S) interface, but we have plans to deliver many more, including - WebSockets, SSH, ZeroMQ, NanoMSG and Axon.
+                        Blackrock is an Application Server - Built for the Internet of Apps. Unlike many other application servers, you don't need to be radically self-reliant to use it. It really is quite simple.<br/><br/>In stand-alone mode it can run an unlimited number of apps, or you can embed it as a dependency into your next project.
                     </p>
                     <hr class="space s" />
                     <a href="docs/index.html" class="circle-button btn btn-lg">Read The Docs</a>
